Corrigido bug notification

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:background="@drawable/ap306">
 
     <RelativeLayout
@@ -37,7 +37,7 @@
 
         <SeekBar
             android:id="@+id/seekBar"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingRight="30dp"
             android:paddingLeft="30dp"
@@ -62,4 +62,4 @@
             android:layout_alignEnd="@+id/seekBar" />
 
     </RelativeLayout>
-</GridLayout>
+</FrameLayout>
